finished styling the elements

--- a/index.html
+++ b/index.html
@@ -6,25 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sitemate | Challenge</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
     <main class="container">
-        <button class="container__button" id="click">
+        <button class="container__button button" id="click">
             Click Me
         </button>
     </main>
-
     <div class="modal">
         <div class="modal__wrapper">
             <p>Are you sure you want to continue</p>
             <div class="modal__buttons">
-                <button id='yes'>Yes</button>
-                <button id='cancel'>Cancel</button>
+                <button id='yes' class="button">Yes</button>
+                <button id='cancel' class="button">Cancel</button>
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
