created function to display and remove  modal

--- a/index.html
+++ b/index.html
@@ -15,16 +15,9 @@
             Click Me
         </button>
     </main>
-    <div class="modal">
-        <div class="modal__wrapper">
-            <p>Are you sure you want to continue</p>
-            <div class="modal__buttons">
-                <button id='yes' class="button">Yes</button>
-                <button id='cancel' class="button">Cancel</button>
-            </div>
-        </div>
-    </div>
 
+
+    <script src="./index.js"></script>
 </body>
 
 </html>
