--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button class="container__button button" id="click">
             Click Me
         </button>
+        <div class="clicked"></div>
     </main>
 
 
